<resources>
    <string name="app_name" translatable="false">Awesome Concert</string>

    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_action_search">Detailed search</string>
    <string name="drawer_action_connection">Sign in</string>
    <string name="drawer_action_register">Sign up</string>
    <string name="drawer_action_notification">Notifications</string>
    <string name="drawer_action_concerts">Upcoming concerts</string>
    <string name="drawer_action_explore">All concerts</string>
    <string name="explore_search">Search for a concert</string>
    <string name="drawer_action_account">My Account</string>
    <string name="drawer_action_logout">Logout</string>
    <string name="dialog_old_passwd">Old password</string>
    <string name="dialog_new_passwd">New password</string>
    <string name="connexion_connection">Login</string>
    <string name="connexion_name">Name</string>
    <string name="connexion_last_name">Last Name</string>
    <string name="connexion_email">Email</string>
    <string name="connexion_password">Password</string>
    <string name="connexion_password_confirmation">Password Confirmation</string>
    <string name="connexion_save">Save</string>
    <string name="connexion_modify">Modify password</string>
    <string name="search_artist">Search by artist only</string>
    <string name="search_concert">Search by concert only</string>
    <string name="search_artist_name">Artist name</string>
    <string name="search_location">Place</string>
    <string name="search_concert_name">Concert name</string>
    <string name="detail_artist">Artist</string>
    <string name="detail_itinerary">Itinerary</string>
    <string name="detail_all_concerts">All concerts</string>
    <string name="detail_purchase_OK">Thanks for purchasing a ticket</string>
    <string name="detail_purchase_error">You must be logged in to buy a ticket</string>
    <string name="connexion_passwd_no_match">Password confirmation and password do not match</string>
    <string name="connexion_passwd_invalid">Login or password invalid</string>
</resources>
