<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="fr.stri.ihm.awesomeconcert.awesomeconcert.viewmodel.ConnexionFragmentViewModel"/>
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/spacing_s"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:paddingBottom="@dimen/spacing_s"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connexion_connection"
                android:textAppearance="@style/normalFont.bold"/>

            <EditText
                android:id="@+id/login_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_row"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:paddingBottom="@dimen/spacing_s"
            android:visibility="@{viewModel.completeProfile ? View.VISIBLE : View.GONE}"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connexion_name"
                android:textAppearance="@style/normalFont.bold"/>

            <EditText
                android:id="@+id/name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/last_name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_row"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:paddingBottom="@dimen/spacing_s"
            android:visibility="@{viewModel.completeProfile ? View.VISIBLE : View.GONE}"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connexion_last_name"
                android:textAppearance="@style/normalFont.bold"/>

            <EditText
                android:id="@+id/last_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_row"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:paddingBottom="@dimen/spacing_s"
            android:visibility="@{viewModel.completeProfile ? View.VISIBLE : View.GONE}"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connexion_email"
                android:textAppearance="@style/normalFont.bold"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwd_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_row"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:paddingBottom="@dimen/spacing_s"
            android:visibility="@{viewModel.isAccount ? View.GONE : View.VISIBLE}"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connexion_password"
                android:textAppearance="@style/normalFont.bold"/>

            <EditText
                android:id="@+id/passwd_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwd_row"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:paddingBottom="@dimen/spacing_s"
            android:visibility="@{viewModel.confirmPasswd ? View.VISIBLE : View.GONE}"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connexion_password_confirmation"
                android:textAppearance="@style/normalFont.bold"/>

            <EditText
                android:id="@+id/passwd_field_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:onClick="@{viewModel.onClick}"
            android:text="@{viewModel.buttonText}"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.isAccount ? View.GONE : View.VISIBLE}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?attr/colorPrimary"
            android:visibility="@{viewModel.isAccount ? View.VISIBLE : View.GONE}"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:onClick="@{viewModel.onSaveClick}"
                android:text="@string/connexion_save"
                android:textColor="@android:color/white"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimaryDark"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:onClick="@{viewModel.onPasswdEditClick}"
                android:text="@string/connexion_modify"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </RelativeLayout>
</layout>