<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="fr.stri.ihm.awesomeconcert.awesomeconcert.viewmodel.SearchFragmentViewModel"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/spacing_s"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/search_artist_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_weight="1"
                android:onClick="@{viewModel.onArtistTick}"
                android:text="@string/search_artist"
                android:layout_gravity="center"
                android:gravity="center"/>

            <CheckBox
                android:id="@+id/search_concert_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_weight="1"
                android:onClick="@{viewModel.onConcertTick}"
                android:text="@string/search_concert"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{viewModel.artists ? View.VISIBLE : View.GONE}"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/normalFont"
                android:text="@string/search_artist_name"/>

            <EditText
                android:id="@+id/search_artist_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{viewModel.concerts ? View.VISIBLE : View.GONE}"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/normalFont"
                android:text="@string/search_location"/>

            <EditText
                android:id="@+id/search_place_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{viewModel.concerts ? View.VISIBLE : View.GONE}"
            android:paddingStart="@dimen/spacing_s"
            android:paddingEnd="@dimen/spacing_s"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/normalFont"
                android:text="@string/search_concert_name"/>

            <EditText
                android:id="@+id/search_concert_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/spacing_s"
            android:background="@color/cardview_shadow_start_color"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_results"
            android:background="@color/cardview_dark_background"/>
    </LinearLayout>
</layout>