<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="fr.stri.ihm.awesomeconcert.awesomeconcert.viewmodel.DetailActivityViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_concert_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/activity_concert_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    app:layout_collapseMode="parallax"
                    bind:imageDrawable="@{viewModel.coverRes}"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/activity_concert_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_attach_money_white_24dp"
            android:visibility="@{viewModel.canBuyTicket ? View.VISIBLE : View.GONE}"
            android:onClick="@{viewModel.BuyActivityViewModel}"
            android:clickable="true"
            app:layout_anchor="@id/activity_concert_collapsing_toolbar"
            app:layout_anchorGravity="bottom|right|end"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_m"
                android:paddingBottom="@dimen/spacing_m">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_s">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@style/bigFont.bold"
                        android:text="@{viewModel.secondaryTitle}"/>
                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/drawer_action_notification"
                        android:checked="@{viewModel.isChecked}"
                        android:gravity="end|center_vertical"
                        android:layout_gravity="center_vertical"
                        bind:onCheckedChanged="@{(switch, checked) -> viewModel.onNotificationsToggle(checked)}"
                        android:visibility="@{viewModel.isLogged ? View.VISIBLE : View.GONE}"/>
                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/normalFont"
                    android:padding="@dimen/spacing_s"
                    android:text="@{viewModel.mainText}"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="@{viewModel.isConcert ? View.VISIBLE : View.GONE}"
            android:weightSum="2"
            android:background="?attr/colorPrimary"
            android:layout_gravity="bottom">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:onClick="@{viewModel.onPrimaryButtonClicked}"
                android:background="@android:color/transparent"
                android:text="@string/detail_artist"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimaryDark"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:onClick="@{viewModel.onSecondaryButtonClicked}"
                android:background="@android:color/transparent"
                android:text="@string/detail_itinerary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isConcert ? View.GONE : View.VISIBLE}"
            android:background="?attr/colorPrimary"
            android:layout_gravity="bottom">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:onClick="@{viewModel.onPrimaryButtonClicked}"
                android:background="@android:color/transparent"
                android:text="@string/detail_all_concerts"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>